--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -23,5 +23,28 @@
   "fastservers": "Fast servers",
   "deluxe": "Deluxe",
   "allserver": "All server",
-  "locationsi": " Locations"
+  "locationsi": " Locations",
+  "loginvoufy": "Log in VoyFy",
+  "log_in": "Sign in",
+  "loginapple": "Log in via Apple",
+  "logingoogle": "Log in via Google",
+  "loginkeeppixel": "Log in via Keep Pixel",
+  "loginservice": "Log in through the Services",
+  "email": "Email",
+  "password": "Password",
+  "or": "or",
+  "register": "Register",
+  "login": "Login",
+  "nick": "Nickname",
+  "enternick": "Enter nickname",
+  "enteremail": "Enter email",
+  "via": "via",
+  "enterpass": "Enter password",
+  "enterlog": "Enter login",
+  "wrongpass": "Wrong password",
+  "registervoufy": "Register with VoyFy",
+  "setlogin": "A user with this username exists",
+  "account": "Account",
+  "subc": "Subscription",
+  "logout": "Log out"
 }
