--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -23,5 +23,28 @@
   "fastservers": "Быстрые серверы",
   "deluxe": "Deluxe",
   "allserver": "Все сервера",
-  "locationsi": " Локаций"
+  "locationsi": " Локаций",
+  "loginvoufy": "Вход в VoyFy",
+  "log_in": "Войти",
+  "loginapple": "Войти через Apple",
+  "logingoogle": "Войти через Google",
+  "loginkeeppixel": "Войти через Keep Pixel",
+  "loginservice": "Войти через Сервисы",
+  "email": "Почта",
+  "password": "Пароль",
+  "or": "или",
+  "register": "Зарегистрироваться",
+  "login": "Логин",
+  "nick": "Ник",
+  "via": "через",
+  "enterpass": "Введите пароль",
+  "enterlog": "Введите логин",
+  "enternick": "Введите ник",
+  "enteremail": "Введите почту",
+  "wrongpass": "Неправильный пароль",
+  "registervoufy": "Зарегистрироваться в VoyFy",
+  "setlogin": "Пользователь с таким логином существует",
+  "account": "Аккаунт",
+  "subc": "Подписка",
+  "logout": "Выйти"
 }
